--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -19,6 +19,8 @@
 }
 
 .domainList {
+  display: flex;
+  justify-content: space-between;
   margin-top: 30px;
-  text-align: left;
+  /* text-align: left; */
 }
