--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -14,6 +14,21 @@
   justify-content: space-between;
   margin-top: 30px;
 }
+
+.domainForm {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.domainInput {
+  margin: 10px;
+  border-radius: 4px;
+  width: 280px;
+  border: 1px solid rgb(124, 120, 120);
+  box-shadow: 3px 2px rgb(173 167 167 / 60%);
+}
+
 @media (max-width: 1440px) {
   .sideBar {
     position: relative;
