--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,54 @@
   grid-column-start: 2;
 }
 
+.dot-overtaking {
+  position: absolute;
+  top: 50vh;
+  right: 50%;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: transparent;
+  color: rgb(51, 51, 51);
+  margin: -1px 0;
+  box-shadow: 0 -20px 0 0;
+  animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+}
+
+.dot-overtaking::before,
+.dot-overtaking::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 12px;
+  height: 12px;
+  border-radius: 6px;
+  background-color: transparent;
+  color: rgb(51, 51, 51);
+  box-shadow: 0 -20px 0 0;
+}
+
+.dot-overtaking::before {
+  animation: dotOvertaking 2s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  animation-delay: 0.3s;
+}
+
+.dot-overtaking::after {
+  animation: dotOvertaking 1.5s infinite cubic-bezier(0.2, 0.6, 0.8, 0.2);
+  animation-delay: 0.6s;
+}
+
+@keyframes dotOvertaking {
+  0% {
+    transform: rotateZ(0deg);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
 @media (max-width: 1440px) {
   .app {
     display: flex;
