--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -9,10 +9,15 @@
   box-shadow: 5px 2px rgb(173 167 167 / 60%);
 }
 
-.domainList {
+.domainListTitle {
   display: flex;
   justify-content: space-between;
   margin-top: 30px;
+}
+
+.domainList {
+  display: flex;
+  justify-content: space-between;
 }
 
 .domainForm {
